fix blurry rendering and scaling issues with canvas elem

--- a/src/components/MultiTrackViewer/MultiTrackViewer.scss
+++ b/src/components/MultiTrackViewer/MultiTrackViewer.scss
@@ -6,9 +6,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    position: relative;
 
     #webgl-canvas {
+        position: absolute;
         width: 100%;
+        height: 100%;
     }
     .pannable {
         cursor: -webkit-grab; cursor:-moz-grab;
